--- a/style.css
+++ b/style.css
@@ -202,3 +202,6 @@
             justify-content: space-between;
             background-color: red;
         }
+       footer{
+              text-align:center;
+       }
